--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,9 @@
-{}
+{
+  "printWidth": 120,
+  "tabWidth": 4,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": false,
+  "arrowParens": "always"
+}
